--- a/templates/athlete/index.html.twig
+++ b/templates/athlete/index.html.twig
@@ -4,17 +4,27 @@
 
 {% block body %}
 <style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+    .example-wrapper {
+        margin: 1em auto;
+        max-width: 800px;
+        width: 95%;
+        font: 18px/1.5 sans-serif;
+    }
+
+    .example-wrapper code {
+        background: #F5F5F5;
+        padding: 2px 6px;
+    }
 </style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+<form method="post" action="{{ path("athlete_recherche") }} ">
+    <select name="leclub">
+        <option value="">--Choisissez un club--</option>
+        {% for club in clubs %}
+        <option value="{{ club.id }}"> {{ club.name }} </option>
+        {% endfor %}
+    </select>
+    <input type="submit" value="Valider"/>
+</form>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/mnt/c/Users/guill/Documents/Scolaire/projets-perso/projet-cjf/athlete-ranking/athlete-ranking/src/Controller/AthleteController.php'|file_link(0) }}">src/Controller/AthleteController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/mnt/c/Users/guill/Documents/Scolaire/projets-perso/projet-cjf/athlete-ranking/athlete-ranking/templates/athlete/index.html.twig'|file_link(0) }}">templates/athlete/index.html.twig</a></code></li>
-    </ul>
-</div>
 {% endblock %}
