affichage des athletes

--- a/templates/athlete/classementParCategorie.html.twig
+++ b/templates/athlete/classementParCategorie.html.twig
@@ -17,7 +17,13 @@
         }
     </style>
 
-    {{ clubId }}
+    {{ dump(athletesFromClub) }}
 
+    <select name="athlete">
+        <option value="">--Choisissez un athlete--</option>
+        {% for athlete in athletesFromClub %}
+            <option value="{{ athlete.id }}"> {{ athlete.getFirstName() }} </option>
+        {% endfor %}
+    </select>
 
 {% endblock %}
