--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -14,7 +14,7 @@
 
 
     <div class="example-wrapper">
-        <a href={{ path("admin_connexion") }}>
+        <a href={{ path("connexion") }}>
             Se connecter en tant qu'Administrateur
         </a>
     </div>
