--- a/templates/athlete/rechercheParAthlete.html.twig
+++ b/templates/athlete/rechercheParAthlete.html.twig
@@ -17,7 +17,17 @@
         }
     </style>
 
-    {{ clubId }}
+<form method="post" action="{{ path("athlete_dataRechercheAthleteAction", {"clubId":clubId}) }} ">
+    <label for="lastname">Nom</label>
+
+    <input type="text" id="nom" name="nom" required>
+
+    <label for="firstName">Prenom</label>
+
+    <input type="text" id="prenom" name="prenom" required>
+    <input type="submit" value="Valider"/>
+</form>
+
 
 
 {% endblock %}
