--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -1,42 +1,39 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AccueilController!{% endblock %}
 
+{% block head %}
+    {{ parent() }}
+
+{% endblock %}
 {% block body %}
-    <style>
-        .example-wrapper {
-            margin: 1em auto;
-            max-width: 800px;
-            width: 95%;
-            font: 18px/1.5 sans-serif;
-        }
-    </style>
 
-    <span>
-        <div class="example-wrapper">
+
+
+    <h1 class="titre">Bienvenue sur athlète ranking ! </h1>
+
+    <div class="marginTop">
         <a href={{ path("connexion") }}>
-            <button class="glow-on-hover" type="button">
+            <button class="buttonAccueil glow-on-hover">
                 Je suis un Administrateur
             </button>
         </a>
     </div>
-        <br/>
-    <div class="example-wrapper">
+
+    <br>
+
+    <div class="marginTop">
         <a href={{ path("athlete_listeClub") }}>
-            <button class="glow-on-hover" type="button">
+            <button class="buttonAccueil glow-on-hover">
             Je suis un Athlete
             </button>
         </a>
     </div>
-         </span>
 
 
-
-    {#    {% block javascripts %} #}
-    {#        <script src="//code.jquery.com/jquery-2.1.4.min.js"></script> #}
-    {#        <script src=" {{ asset('js/main.js') }}"></script> #}
-    {#        {% endblock %} #}
 {% endblock %}
 {% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('css/accueil.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/buttonStyle.css') }}">
     <link rel="stylesheet" href="{{ asset('css/style.css') }}">
+
 {% endblock %}
