--- a/templates/athlete/index.html.twig
+++ b/templates/athlete/index.html.twig
@@ -3,28 +3,39 @@
 {% block title %}Hello AthleteController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper {
-        margin: 1em auto;
-        max-width: 800px;
-        width: 95%;
-        font: 18px/1.5 sans-serif;
-    }
 
-    .example-wrapper code {
-        background: #F5F5F5;
-        padding: 2px 6px;
-    }
-</style>
 
-<form method="post" action="{{ path("athlete_recherche") }} ">
-    <select name="leclub">
-        <option value="">--Choisissez un club--</option>
-        {% for club in clubs %}
-        <option value="{{ club.id }}"> {{ club.name }} </option>
-        {% endfor %}
-    </select>
-    <input type="submit" value="Valider"/>
-</form>
+
+    <h1 class="titre">Choisissez un club ! </h1>
+
+
+    <form method="post" action="{{ path("athlete_recherche") }} ">
+
+        <div class="select scrolldownSize marginTop">
+            <select name="leclub">
+                {% for club in clubs %}
+                    <option value="{{ club.id }}"> {{ club.name }} </option>
+                {% endfor %}
+            </select>
+        </div>
+
+
+        <div class="marginTop2">
+            <button class="glow-on-hover buttonSize" type="submit">
+                Valider
+            </button>
+        </div>
+
+    </form>
+
+
+
+{% endblock %}
+
+{% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('css/style.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/selectionClub.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/buttonStyle.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/scrolldown.css') }}">
 
 {% endblock %}
