--- a/templates/athlete/recherche.html.twig
+++ b/templates/athlete/recherche.html.twig
@@ -3,31 +3,30 @@
 {% block title %}Hello AthleteController!{% endblock %}
 
 {% block body %}
-    <style>
-        .example-wrapper {
-            margin: 1em auto;
-            max-width: 800px;
-            width: 95%;
-            font: 18px/1.5 sans-serif;
-        }
 
-        .example-wrapper code {
-            background: #F5F5F5;
-            padding: 2px 6px;
-        }
-    </style>
 
-    <div class="example-wrapper">
+    <div class="marginTop2">
         <a href={{ path("athlete_rechercheAthleteAction", {"clubId":clubId}) }}>
-            Rechercher une personne
+            <button class="buttonAccueil glow-on-hover">
+                Rechercher une personne
+            </button>
         </a>
     </div>
 
-    <div class="example-wrapper">
+    <div class="marginTop2">
         <a href={{ path("athlete_selectCategorieAction", {"clubId":clubId}) }}>
-            Classement par catégorie
+            <button class="buttonAccueil glow-on-hover">
+                Classement par catégorie
+            </button>
         </a>
     </div>
 
+
+{% endblock %}
+
+{% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('css/accueil.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/buttonStyle.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/style.css') }}">
 
 {% endblock %}
