--- a/templates/athlete/selectCategorie.html.twig
+++ b/templates/athlete/selectCategorie.html.twig
@@ -3,29 +3,33 @@
 {% block title %}Hello AthleteController!{% endblock %}
 
 {% block body %}
-    <style>
-        .example-wrapper {
-            margin: 1em auto;
-            max-width: 800px;
-            width: 95%;
-            font: 18px/1.5 sans-serif;
-        }
 
-        .example-wrapper code {
-            background: #F5F5F5;
-            padding: 2px 6px;
-        }
-    </style>
-
+    <h1 class="titre">Choisissez une catégorie ! </h1>
 
 <form method="post" action="{{ path("athlete_athletesCategorieAction", {"clubId":clubId}) }} ">
-    <select name="laCat">
-        <option value="">--Choisissez une categorie--</option>
-        {% for cat in allCats %}
-            <option value="{{ cat.id }}"> {{ cat.getLongName() }} </option>
-        {% endfor %}
-    </select>
-    <input type="submit" value="Valider"/>
+    <div class="select scrolldownSize marginTop">
+        <select name="laCat">
+            {% for cat in allCats %}
+                <option value="{{ cat.id }}"> {{ cat.getLongName() }} </option>
+            {% endfor %}
+        </select>
+    </div>
+
+    <div class="marginTop3">
+        <button class="glow-on-hover buttonSize" type="submit">
+            Valider
+        </button>
+    </div>
+
+
 </form>
+
+{% endblock %}
+
+{% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('css/style.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/selectionClub.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/buttonStyle.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/scrolldown.css') }}">
 
 {% endblock %}
