--- a/templates/admin/accueil.html.twig
+++ b/templates/admin/accueil.html.twig
@@ -5,7 +5,6 @@
 {% block body %}
     <h1> {{ club.name }} </h1>
 
-    <a href="{{ path("admin_ajouter_athlete") }}"> Ajouter un athlète </a><br/><br/>
-    <a href="{{ path("admin_ajouter_evenement") }}"> Ajouter un événement </a><br/><br/>
-    <a href="{{ path("admin_liste_evenement") }}"> Sélectionner un événement </a><br/><br/>
+    <a href="{{ path("admin_liste_athlete") }}"> Les athlètes </a><br/><br/>
+    <a href="{{ path("admin_liste_evenement") }}"> Les événements </a><br/><br/>
 {% endblock %}
