--- a/templates/athlete/rechercheParAthlete.html.twig
+++ b/templates/athlete/rechercheParAthlete.html.twig
@@ -3,31 +3,47 @@
 {% block title %}Hello AthleteController!{% endblock %}
 
 {% block body %}
-    <style>
-        .example-wrapper {
-            margin: 1em auto;
-            max-width: 800px;
-            width: 95%;
-            font: 18px/1.5 sans-serif;
-        }
 
-        .example-wrapper code {
-            background: #F5F5F5;
-            padding: 2px 6px;
-        }
-    </style>
 
-<form method="post" action="{{ path("athlete_dataRechercheAthleteAction", {"clubId":clubId}) }} ">
-    <label for="lastname">Nom</label>
+    <form method="post" action="{{ path("athlete_dataRechercheAthleteAction", {"clubId":clubId}) }} ">
 
-    <input type="text" id="nom" name="nom" required>
+        <div class="marginTop">
+            <h3 class="texte">Entrez le nom de l'athlète</h3>
 
-    <label for="firstName">Prenom</label>
+            <div class="webflow-style-input">
+                <input type="text" id="nom" name="nom" required>
+            </div>
+        </div>
 
-    <input type="text" id="prenom" name="prenom" required>
-    <input type="submit" value="Valider"/>
-</form>
+
+        <div class="marginTop">
+            <h3 class="texte">Entrez le prénom de l'athlète</h3>
+
+            <div class="webflow-style-input">
+                <input type="text" id="prenom" name="prenom" required>
+            </div>
+        </div>
+
+
+
+        <div class="marginTop2">
+            <button class="glow-on-hover buttonSize" type="submit">
+                Valider
+            </button>
+        </div>
+
+    </form>
 
 
 
 {% endblock %}
+
+{% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('css/input.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/style.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/buttonStyle.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/selectionClub.css') }}">
+
+
+{% endblock %}
+
