--- a/templates/athlete/recherche.html.twig
+++ b/templates/athlete/recherche.html.twig
@@ -8,7 +8,7 @@
     <div class="marginTop2">
         <a href={{ path("athlete_rechercheAthleteAction", {"clubId":clubId}) }}>
             <button class="buttonAccueil glow-on-hover">
-                Rechercher une personne
+                Rechercher un athlète
             </button>
         </a>
     </div>
