--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,9 +26,20 @@ body {
     color: #f0ffff;
 }
 
+.smalltexte {
+    font-size: 1vw;
+    color: #f0ffff;
+}
+
 .smallButton {
     font-size: 1vw;
     width: 10vw;
+    height: 2vw;
+}
+
+.buttonSizeStandart {
+    font-size: 1vw;
+    width: 14vw;
     height: 2vw;
 }
 
