--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,7 +37,7 @@ body {
     height: 2vw;
 }
 
-.buttonSizeStandart {
+.buttonSizeStandard {
     font-size: 1vw;
     width: 14vw;
     height: 2vw;
