--- a/templates/admin/liste_evenement.html.twig
+++ b/templates/admin/liste_evenement.html.twig
@@ -6,7 +6,7 @@
     <h1 class="texte"> Liste des evenements du club {{ app.user.club.name }} </h1>
 
     <a href="{{ path("admin_ajouter_evenement") }}">
-        <button class="buttonSizeStandart glow-on-hover">
+        <button class="buttonSizeStandard glow-on-hover">
             Ajouter un evenement
         </button>
     </a>
