--- a/templates/admin/editer_evenement.html.twig
+++ b/templates/admin/editer_evenement.html.twig
@@ -33,7 +33,7 @@
 
 
     <div class="marginTop">
-        <a href="{{ path('admin_supprimer_evenement', {"id": event.id}) }}">
+        <a href="{{ path('admin_supprimer_evenement', {"id": event.id}) }}" onclick="ask()">
             <button class="buttonSizeStandard glow-on-hover">
                 Supprimer l'evenement
             </button>
