--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -5,7 +5,7 @@ nav {
     width: 590px;
     height: 50px;
     /*background-color: #34495e;*/
-    background-color: #6699cc;
+    background-color: #4793e3;
     border-radius: 8px;
     font-size: 0;
 }
